# r2_ws

./: .buildinfo  .buildinfo.bak  .gitignore  CHANGELOG.md  DEPLOYMENT.md  README.md  appendix_a_object_oriented_programming.html  appendix_b_mvc_architecture.html  appendix_c_mvvm_architecture.html  appendix_d_distributed_systems.html  appendix_d_ros2_overview.html  appendix_e_distributed_systems.html  appendix_e_monolithic_architecture.html  appendix_f_monolithic_architecture.html  appendix_f_real_time_system_and_middleware.html  appendix_g_ros2_architecture.html  appendix_h_udp.html  appendix_i_quaternions.html  appendix_j_kinematics.html  appendix_k_state_machine.html  appendix_l_pid_control.html  appendix_m_localization.html  appendix_n_odometry.html  appendix_o_waypoint_navigation.html  appendix_p_complementary_filtering.html  appendix_q_can_bus.html  development_notes.md  export_model.py  genindex.html  hardware_specification.html  index.html  installation_and_configuration.html  introduction.html  objects.inv  requirements.txt  requirements_common.txt  requirements_jetson.txt  search.html  searchindex.js  technical_reference.html  (+4 more)
.doctrees/: appendix_c_mvvm_architecture.doctree  appendix_d_distributed_systems.doctree  appendix_d_ros2_overview.doctree  appendix_e_distributed_systems.doctree  appendix_e_monolithic_architecture.doctree  appendix_f_real_time_system_and_middleware.doctree  (+8 more)
src/custom_messages/: CMakeLists.txt  package.xml
src/custom_messages/msg/: DigitalAndAnalogFeedback.msg  MotorCommand.msg  PwmCommand.msg  ServoCommand.msg  WaypointBatch.msg
(+201 files in other folders)
